kubernetes/k8s/01.pod.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    version: v1
  name: simple-pod
spec:
  containers:
  - name: hi
    image: registry.k8s.io/busybox
    args:
    - /bin/sh
    - -c
    - echo "Hi"
