kubernetes/k8s/05.pod-init-containers.yml
apiVersion: v1
kind: Pod
metadata:
  name: init-container
  labels:
    app.kubernetes.io/name: sobota
spec:
  containers:
  - name: myapp-container
    image: busybox
    command: ['sh', '-c', 'echo The app is running! && sleep 3600']
