kubernetes/k8s/test.yml
apiVersion: v1
kind: Service
metadata:
  name: isa-k8s-version
spec:
  selector:
    app: deploy-v1
  ports:
    - targetPort: 80
      port: 8080
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: isa-k8s-version
  labels:
    isa: app
spec:
    selector:
      matchLabels:
        app: deploy-v1
    replicas: 4
    template:
      metadata:
        name: isa-k8s-version-deploy-v1
        labels:
          app: deploy-v1
      spec:
        containers:
          - name: isa-container
            image: nginx
            imagePullPolicy: IfNotPresent
            ports:
              - containerPort: 80
            livenessProbe:
              httpGet:
                port: 80
                path: /test
                scheme: HTTP
              periodSeconds: 1
              failureThreshold: 1
              successThreshold: 1
              timeoutSeconds: 1



#apiVersion: v1
#kind: Pod
#metadata:
#  name: isa-k8s-version
#  labels:
#    isa: app
#spec:
#  containers:
#    - name: isa-container
#      image: isa/k8s:v1
#      imagePullPolicy: IfNotPresent
#      env:
#        - name: APP_VERSION
#          value: WersjaBeta
#      volumeMounts:
#        - mountPath: /tmp/a-mount
#          name: nazwaWolumenu
#    - name: isa-container
#      image: isa/k8s:v2
#      imagePullPolicy: IfNotPresent
#      volumeMounts:
#        - mountPath: /tmp/b-mount
#          name: nazwaWolumenu
#  volumes:
#    - name: nazwaWolumenu
