kubernetes/k8s/ingress-from-scratch.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-from-scratch
spec:
  defaultBackend:
    service:
      name: isa-k8s-wshop
      port:
        number: 80
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: isa-k8s-wshop
                port:
                  number: 80
